[package]
name = "gronk"
version = "0.1.0"
edition = "2018"


[dependencies]
audiotags = "0.2.7182"
crossbeam-channel = "0.5.1"
crossterm = "0.21.0"
hashbrown = "0.11.2"
jwalk = "0.6.0"
soloud = { git = "https://github.com/moalyousef/soloud-rs" }
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
winapi = "0.3.9"
