[package]
name = "gonk-core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.0"
symphonia = { git = "https://github.com/pdeljanov/Symphonia", default-features = false, features = [
    "flac",
    "mp3",
    "ogg",
    "vorbis",
] }
winwalk = { git = "https://github.com/zX3no/winwalk", version = "0.1.0" }

[features]
profile = []
