[package]
name = "gonk-core"
version = "0.2.0"
edition = "2021"

[dependencies]
rayon = "1.7.0"
symphonia = { git = "https://github.com/pdeljanov/Symphonia", default-features = false, features = [
    "flac",
    "mp3",
    "ogg",
    "vorbis",
] }
winwalk = "0.2.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "flac"
harness = false

[features]
profile = []
