[package]
name = "gonk-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.6.0"
rayon = "1.5.3"
rusqlite = { version = "0.27.0", features = ["bundled"] }
gonk-player = {path = "../gonk-player"}
lazy_static = "1.4.0"
no_deadlocks = "1.3.0"
