[package]
name = "gonk-database"
version = "0.1.0"
edition = "2021"

authors = ["Bay"]
description = "Database for gonk"
repository = "https://github.com/zX3no/gonk"
readme = "README.md"
license = "MIT"


[dependencies]
walkdir = "2"
rayon = "1.5.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
gonk-player = {path = "../gonk-player"}
