[package]
name = "gonk-database"
version = "0.1.0"
edition = "2021"
authors = ["Bay"]
description = "Database for gonk"
repository = "https://github.com/zX3no/gonk"
readme = "README.md"
license = "CC0-1.0"

[dependencies]
memmap2 = "0.5.5"
rayon = "1.5.3"
walkdir = "2.3.2"
symphonia = { version = "0.5.1", features = ["mp3", "isomp4", "alac", "aac"] }