[package]
name = "gonk-player"
version = "0.2.0"
edition = "2021"
description = "Music playback library for gonk"
repository = "https://github.com/zX3no/gonk"
readme = "../README.md"
license = "CC0-1.0"

[dependencies]
crossbeam-channel = "0.5.6"
gonk-core = {version = "0.2.0", path = "../gonk-core"}
symphonia = { version = "0.5.1", default-features = false, features = ["flac", "mp3", "ogg", "vorbis"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["mmdeviceapi", "combaseapi", "devpkey", "audioclient", "synchapi"] }
