[package]
name = "gonk-player"
version = "0.2.0"
edition = "2021"
description = "Music playback library for gonk"
repository = "https://github.com/zX3no/gonk"
readme = "../README.md"
license = "CC0-1.0"

[dependencies]
crossbeam-channel = "0.5.8"
gonk-core = { version = "0.2.0", path = "../gonk-core" }
symphonia = { git = "https://github.com/pdeljanov/Symphonia", default-features = false, features = [
    "flac",
    "mp3",
    "ogg",
    "vorbis",
] }
rb = "0.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "mmdeviceapi",
    "combaseapi",
    "devpkey",
    "audioclient",
    "synchapi",
] }
