[package]
name = "gonk-player"
version = "0.2.0"
edition = "2021"
description = "Music playback library for gonk"
repository = "https://github.com/zX3no/gonk"
readme = "../README.md"
license = "CC0-1.0"

[features]
profile = ["gonk-core/profile"]
strip = ["mini/strip"]

[dependencies]
boxcar = "0.2.4"
crossbeam-channel = "0.5.8"
gonk-core = { version = "0.2.0", path = "../gonk-core" }
mini = { version = "0.1.0", path = "../../mini" }
symphonia = { git = "https://github.com/pdeljanov/Symphonia", default-features = false, features = [
    "flac",
    "mp3",
    "ogg",
    "vorbis",
] }

[target.'cfg(windows)'.dependencies.makepad-windows]
git = "https://github.com/makepad/makepad"
version = "0.51.1"
features = [
    "Win32_Foundation", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_Graphics_Gdi", 
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_DataExchange",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Ole",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Media_MediaFoundation",
    "Win32_System_Variant",
    "Win32_System_SystemServices",
    "Devices_Enumeration", 
    "Devices_Midi",
    "Foundation_Collections",
    "Storage",
    "Storage_Streams",
    "implement"
] 
