[package]
name = "gonk-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = {version = "1.0.136", features = ["derive"]}
rodio = {path = "../rodio"}
gonk-core = { path = "../gonk-core" }
crossbeam-channel = "0.5"
static_init = "1.0.2"

