[package]
name = "gonk-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = {version = "1.0.136", features = ["derive"]}
rodio = {path = "../rodio"}
gonk-database = {path = "../gonk-database"}
gonk-types = {path = "../gonk-types"}
crossbeam-channel = "0.5"

