[package]
name = "gonk"
version = "0.2.0"
edition = "2021"
authors = ["Bay"]
description = "A terminal music player"
repository = "https://github.com/zX3no/gonk"
readme = "../README.md"
license = "CC0-1.0"
default-run = "gonk"

[features]
profile = ["gonk-core/profile"]

[dependencies]
unicode-width = "0.1.11"
rayon = "1.7.0"
gonk-player = { version = "0.2.0", path = "../gonk-player" }
gonk-core = { version = "0.2.0", path = "../gonk-core" }
winter = { version = "0.1.0", path = "../../winter" }
# winter = { version = "0.1.0", git = "https://github.com/zX3no/winter" }
