[package]
name = "gonk"
version = "0.2.0"
edition = "2021"
authors = ["Bay"]
description = "A terminal music player"
repository = "https://github.com/zX3no/gonk"
readme = "../README.md"
license = "CC0-1.0"
default-run = "gonk"

[features]
profile = ["gonk_core/profile"]
simd = ["gonk_core/simd"]
strip = ["gonk_player/strip", "mini/strip"]

[dependencies]
rayon = "1.7.0"
gonk_player = { version = "0.2.0", path = "../gonk_player" }
gonk_core = { version = "0.2.0", path = "../gonk_core" }
winter = { version = "0.1.0", git = "https://github.com/zX3no/winter" }
mini = { git = "https://github.com/zX3no/mini", version = "0.1.0"}
# winter = { version = "0.1.0", path = "../../winter" }
