[package]
name = "gonk_core"
version = "0.2.0"
edition = "2021"

[features]
profile = ["mini/profile"]
simd = ["symphonia/opt-simd"]

[dependencies]
minbin = { git = "https://github.com/zX3no/minbin.git", version = "0.1.0" }
mini = { git = "https://github.com/zX3no/mini", version = "0.1.0" }
rayon = "1.7.0"
symphonia = { git = "https://github.com/pdeljanov/Symphonia", default-features = false, features = [
    "flac",
    "mp3",
    "ogg",
    "vorbis",
] }
winwalk = "0.2.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "flac"
harness = false
