[package]
name = "gonk_player"
version = "0.2.0"
edition = "2021"
description = "Music playback library for gonk"
repository = "https://github.com/zX3no/gonk"
readme = "../README.md"
license = "CC0-1.0"

[lib]
name = "gonk_player"
path = "src/lib.rs"

[features]
profile = ["gonk_core/profile"]
strip = ["mini/strip"]

[dependencies]
crossbeam-queue = "0.3.1"
gonk_core = { version = "0.2.0", path = "../gonk_core" }
mini = { git = "https://github.com/zX3no/mini", version = "0.1.0" }
# This is broken right now.
ringbuf = "0.3.3"
symphonia = { git = "https://github.com/pdeljanov/Symphonia", default-features = false, features = [
    "flac",
    "mp3",
    "ogg",
    "vorbis",
    "opt-simd",
] }

# windows = { version = "0.58.0", features = [
#     "Win32_Devices",
#     "Win32_Devices_FunctionDiscovery",
#     "Win32_Media_Audio",
#     "Win32_Media_KernelStreaming",
#     "Win32_Security",
#     "Win32_System",
#     "Win32_System_Com",
#     "Win32_System_Threading",
#     "Win32_System_Variant",
#     "Win32_UI_Shell_PropertiesSystem",
# ] }

[target.'cfg(windows)'.dependencies.makepad-windows]
git = "https://github.com/makepad/makepad"
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Foundation_Collections",
    "Storage_Streams",
    "implement",
]
