[package]
name = "gonk_player"
version = "0.2.0"
edition = "2021"
description = "Music playback library for gonk"
repository = "https://github.com/zX3no/gonk"
readme = "../README.md"
license = "CC0-1.0"

[lib]
name = "gonk_player"
path = "src/lib.rs"

[features]
profile = ["gonk_core/profile", "mini/profile"]
info = ["mini/info"]
warn = ["mini/warn"]
error = ["mini/error"]

[dependencies]
crossbeam-queue = "0.3.1"
gonk_core = { version = "0.2.0", path = "../gonk_core" }
mini = { git = "https://github.com/zX3no/mini", version = "0.1.0" }
ringbuf = "0.4.1"
symphonia = { git = "https://github.com/pdeljanov/Symphonia", default-features = false, features = [
    "flac",
    "mp3",
    "ogg",
    "vorbis",
    "opt-simd",
] }
wasapi = { git = "https://github.com/zx3no/wasapi", version = "0.1.0" }
# wasapi = { version = "0.1.0", path = "../../wasapi" }
