[package]
name = "gronk"
version = "0.0.1"
edition = "2021"
default-run = "gronk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
gronk-database = {path = "../gronk-database"}
gronk-types = {path = "../gronk-types"}
gronk-player = {path = "../gronk-player"}
rodio = "0.14.0"
