[package]
name = "gronk"
version = "0.0.1"
edition = "2021"
default-run = "gronk"
authors = ["Bay <example@email.com>"]

[dependencies]
crossterm = "0.22.1"
tui = { git = "https://github.com/zX3no/tui-rs",version = "0.16.0", default-features = false, features = ['crossterm'] }
gronk-database = {path = "../gronk-database"}
gronk-types = {path = "../gronk-types"}
gronk-search = {path = "../gronk-search"}
rodio = {path = "../rodio"}
dirs = "4.0.0"
