[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ringbuf = "0.2.8"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = ["mmdeviceapi", "combaseapi", "devpkey", "audioclient", "synchapi"] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.10.0"
bitflags = "1.3"
