[package]
name = "gronk-indexer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.2.7182"
hashbrown = "0.11.2"
jwalk = "0.6.0"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
