[package]
name = "gronk-ui"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "gronk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
gronk-player = {path = "../gronk-player"}
gronk-indexer = {path = "../gronk-indexer"}

